; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_update_crypto.c_verify_signature.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_update_crypto.c_verify_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@GCRY_PK_DSA = common dso_local global i64 0, align 8
@GCRY_PK_RSA = common dso_local global i64 0, align 8
@VLC_EGENERIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @verify_signature(%struct.TYPE_5__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @GCRY_PK_DSA, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @verify_signature_dsa(%struct.TYPE_5__* %14, i32* %15, i32* %16)
  store i32 %17, i32* %4, align 4
  br label %31

18:                                               ; preds = %3
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @GCRY_PK_RSA, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %18
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @verify_signature_rsa(%struct.TYPE_5__* %25, i32* %26, i32* %27)
  store i32 %28, i32* %4, align 4
  br label %31

29:                                               ; preds = %18
  %30 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %24, %13
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @verify_signature_dsa(%struct.TYPE_5__*, i32*, i32*) #1

declare dso_local i32 @verify_signature_rsa(%struct.TYPE_5__*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
